# ChangeLog for www-client/mozilla-firefox-bin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox-bin/ChangeLog,v 1.208 2009/10/19 11:08:30 ssuominen Exp $

  19 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  mozilla-firefox-bin-3.5.2.ebuild:
  amd64 stable wrt #280234

  11 Sep 2009; Markus Meier <maekke@gentoo.org>
  mozilla-firefox-bin-3.0.14.ebuild:
  amd64 stable, bug #284439

  10 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  mozilla-firefox-bin-3.0.14.ebuild:
  stable x86, security bug 284439

*mozilla-firefox-bin-3.5.3 (10 Sep 2009)
*mozilla-firefox-bin-3.0.14 (10 Sep 2009)

  10 Sep 2009; Raúl Porcel <armin76@gentoo.org>
  +mozilla-firefox-bin-3.0.14.ebuild, +mozilla-firefox-bin-3.5.3.ebuild:
  Version bump

  05 Sep 2009; Tobias Heinlein <keytoaster@gentoo.org>
  mozilla-firefox-bin-3.0.13.ebuild:
  amd64 stable wrt bug #282179

  24 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  mozilla-firefox-bin-3.0.13.ebuild:
  stable x86, security bug 282179

  21 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  mozilla-firefox-bin-3.5.2.ebuild:
  revert all stable keywords

  20 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  mozilla-firefox-bin-3.5.2.ebuild:
  stable x86, security bug 280393

*mozilla-firefox-bin-3.5.2 (15 Aug 2009)
*mozilla-firefox-bin-3.0.13 (15 Aug 2009)

  15 Aug 2009; Raúl Porcel <armin76@gentoo.org>
  -mozilla-firefox-bin-3.0.12.ebuild, +mozilla-firefox-bin-3.0.13.ebuild,
  -mozilla-firefox-bin-3.5.1.ebuild, +mozilla-firefox-bin-3.5.2.ebuild:
  Version bump

*mozilla-firefox-bin-3.0.12 (22 Jul 2009)

  22 Jul 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  mozilla-firefox-bin-2.0.0.19.ebuild, mozilla-firefox-bin-3.0.11.ebuild,
  +mozilla-firefox-bin-3.0.12.ebuild, mozilla-firefox-bin-3.5.1.ebuild:
  Bump to 3.0.12, also fix deps for noscript pkgmove

*mozilla-firefox-bin-3.5.1 (20 Jul 2009)

  20 Jul 2009; Raúl Porcel <armin76@gentoo.org>