@@ -1,6 +1,10 @@
 # ChangeLog for www-client/mozilla-firefox
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.557 2009/10/25 19:44:15 anarchy Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.558 2009/10/25 20:11:45 ssuominen Exp $
+
+  25 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
+  -mozilla-firefox-3.5.2-r3.ebuild, mozilla-firefox-3.5.3-r1.ebuild:
+  Mark correct version stable for amd64.
 
   25 Oct 2009; Jory A. Pratt <anarchy@gentoo.org>
   +mozilla-firefox-3.5.2-r3.ebuild:
